# sample_project

./: .gitignore  README.md  output.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  webscraping.py
.github/workflows/: main.yml
wagner/: __init__.py  cmd.py  config.py  main.py
wagner/tests/: test_report.py
