[metadata]
name = wagner
version = 0.1
description = A sample python project that creates a log message with timestamp.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrjeffwagner/sample_project
author = Jeff Wagner
author_email = mr.jeff.wagner@gmail.com
license = UNLICENSED
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = wagner
include_package_data = true
install_requires = datetime

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    wagner = wagner.cmd:main

[bdist_wheel]
universal = true

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_options = true

[mypy-tests.*]
disallow_untyped_defs = false

